@@ -1,3 +1,8 @@
+Mon Feb  8 07:01:35 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (get_catpath): Handle man -> cat substitution correctly
+	  for translated cat pages.
+
 Mon Feb  8 04:57:09 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (format_display_and_save): Use sigaction, not signal.
